--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "reddit-app",
   "private": true,
   "dependencies": {
+    "@babel/core": "*",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "^4.0.0-rc.8",
+    "@vue/babel-preset-app": "^4.2.2",
+    "babel-loader": "^8.0.6",
+    "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
-    "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
+    "vue-turbolinks": "^2.0.4",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.0-beta.31",
+    "babel-core": "^7.0.0-bridge",
     "webpack-dev-server": "^3.10.3"
   }
 }
