--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "^4.0.0-rc.8",
     "@vue/babel-preset-app": "^4.2.2",
     "babel-loader": "^8.0.6",
+    "bootstrap-icons": "^1.0.0-alpha2",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.0",
