--- a/config/database.yml
+++ b/config/database.yml
@@ -4,14 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-# default: &default
-#   adapter: postgresql
-#   encoding: unicode
-#   database: reddit_app_development
-#   pool: 5
-#   username: dave
-#   password:
-#   timeout: 5000
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  database: reddit_app_development
+  pool: 5
+  timeout: 5000
 
 development:
   adapter: postgresql
