--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@vue/babel-preset-app": "^4.2.2",
     "babel-loader": "^8.0.6",
     "bootstrap-icons": "^1.0.0-alpha2",
+    "css-loader": "^3.4.2",
     "rails-ujs": "^5.2.4-1",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
